# qemu

./: .gitignore  compile_commands.json  configure  cpus.c  hmp-commands.hx  meson.build  monitor.c  qemu-options.hx  qmp.c  vl.c
.github/workflows/: docker.yml
accel/tcg/: cpu-exec.c  cputlb.c
block/: file-posix.c
contrib/plugins/: Makefile  byte-size-dist.c  cache-inclusive-parallel.c  cache-inclusive.c  cache-sim-naked.c  cache-sim.c  characterization.c  empty-callback.c  inst-trace-arm.c  inst-trace-bytes.c  inst-trace.c  print-specific-byte.c
contrib/plugins/trace-plug/: Cargo.toml
contrib/plugins/trace-plug/src/: breakdown.rs  lib.rs
docker/: Dockerfile
include/exec/: helper-arch.h
include/monitor/: hmp.h
include/qemu/: plugin.h  qemu-plugin.h
include/qflex/: ArmflexArchState.pb-c.h  armflex-communication.h  armflex-page-demander.h  armflex-verification.h  armflex.h  armflex.pb-c.h  qflex-api.h  qflex-arch.h  qflex-config.h  qflex-helper-a64.h  qflex-hmp.h  qflex-models.h  qflex-profiling.h  qflex-qemu-calls.h  qflex-traces.h  qflex.h
include/sysemu/: cpu-timers.h  sysemu.h
migration/: Makefile.objs  ram.c  savevm-ext.c  savevm-ext.h  savevm.c
monitor/: qmp-cmds.c
plugins/: api.c  core.c  qemu-plugins.symbols
qapi/: misc.json
softmmu/: icount.c  vl.c
util/: Makefile.objs
util/qflex/: ArmflexArchState.pb-c.c  ArmflexArchState.proto  Makefile.objs  armflex-communication.c  armflex-page-demander.c  armflex-verification.c  armflex.c  armflex.h  armflex.pb-c.c  armflex.proto  meson.build  qflex-api.c  qflex-config.c  qflex-hmp.c  qflex.c  (+6 more)
(+32 files in other folders)
