[package]
name = "trace_extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4"
capstone = "0.11"
once_cell = "1.16"

[lib]
crate-type=["rlib", "cdylib"]

[lints]
non-camel-case-types = "allow"
unused = "allow"
